--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -4,5 +4,5 @@
     [product]="myProduct"
     (click)='clicked(myProduct)'
     [class.selected]="isSelected(myProduct)">
-  </product-row
+  </product-row>
 </div>
